# agent_4_agents_app

./: .env.test  .gitignore  Dockerfile  Makefile  app.py  app_nginx  business_requirements_2025_05_21_03_43_15.md  dependencies.yml  description_2025_05_21_03_43_15.md  docker-compose.yml  graph_2025_05_21_03_43_15.md  main.py  pyproject.toml  req_top.txt  requirements.txt  settings.py
abstract/: abstract_agent.py
agents/: ba_agent.py  desc_agent.py  graph_agent.py  planer_agent.py  sa_agent.py
agents/agents/: abstract_agent.py  ba_agent.py  desc_agent.py  planer_agent.py  states.py
agents/tools/: test_planer_giga.py  tools.py
agents/utils/: parser.py  result.py  result_formatter.py  text_formatter.py  tree_builder.py
backend/agent_logic/: in_progress.py  init.py  postprocess.py
backend/gradio/: actions.py
configs/: code-template-config.json  puppeteer-config.json
instructions/: config_orchestrator_example.json  config_specification.json  config_workflow_example.json  desc_instruments.txt  project_agent_instruction.md  project_agent_tools.md  project_content.md  project_instruction.md  sa_instruction.md
prompts/: ba_prompt.txt  ba_prompt_dump.txt  coder_prompt.txt  config_generator_prompt.txt  desc_prompt.txt  desc_prompt_dump.txt  git_prompt.txt  graph_prompt.txt  planer_prompt.txt  sa_prompt.txt
prompts/business/: sa_prompt.txt
prompts/code/: prompt_generator.txt
prompts/dumps/: coder_prompt_dump.txt  graph_prompt_dump.txt
templates/app/: template_endpoints.py.jinja2  (+3 more)
tmp/: test.md
utils/: back_utils.py  cutomLogger.py  utils.py
(+34 files in other folders)
