[project]
name = "agent-4-agents-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.34.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-gigachat>=0.3.10",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
